[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Language Server Protocol implementation for mq query language"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-lsp"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.6.3"

[dependencies]
bimap = {workspace = true}
clap = {workspace = true, features = ["derive"]}
dashmap = {workspace = true}
itertools = {workspace = true}
mq-check = {workspace = true}
mq-formatter = {workspace = true}
mq-hir = {workspace = true}
mq-lang = {workspace = true, features = ["ast-json", "sync", "file-io"]}
mq-markdown = {workspace = true}
serde_json = {workspace = true}
smol_str = {workspace = true}
tokio = {workspace = true, features = ["macros", "io-std", "rt-multi-thread"]}
tower-lsp-server = {workspace = true}
url = {workspace = true}
rustc-hash = {workspace = true}

[[bin]]
name = "mq-lsp"
path = "src/main.rs"

[package.metadata.binstall]
pkg-fmt = "bin"
pkg-url = "{ repo }/releases/download/v{ version }/{ bin }-{ target }{ binary-ext }"
disabled-strategies = ["quick-install"]

[lib]
name = "mq_lsp"
path = "src/lib.rs"
