[package]
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "mq-macros"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
mq-lang = {workspace = true, features = ["cst"]}
mq-markdown.workspace = true
quote = "1"
syn = {version = "2", features = ["full"]}
