[package]
categories.workspace = true
description = "Markdown parsing and manipulation utilities for mq"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "mq-markdown"
repository.workspace = true
version.workspace = true

[dependencies]
ego-tree = {version = "0.10.0", optional = true}
itertools.workspace = true
markdown = "1.0.0"
miette.workspace = true
rustc-hash.workspace = true
scraper = {version = "0.24.0", optional = true}
serde = {workspace = true, features = ["derive"], optional = true}
serde_json = {workspace = true, optional = true}
serde_yaml = {version = "0.9", optional = true}
smol_str.workspace = true

[dev-dependencies]
rstest = "0.26.1"

[features]
default = ["std"]
html-to-markdown = ["dep:scraper", "dep:ego-tree", "dep:serde_yaml"]
json = ["dep:serde", "dep:serde_json", "smol_str/serde"]
std = []
