[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Markdown parsing and manipulation utilities for mq"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-markdown"
readme = "../../README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.3"

[dependencies]
ego-tree = {version = "0.10.0", optional = true}
itertools = "0.14.0"
markdown = "1.0.0"
miette = {version = "7.6.0"}
rustc-hash = "2.1.1"
scraper = {version = "0.24.0", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true}
serde_json = {version = "1.0", optional = true}
serde_yaml = {version = "0.9", optional = true}
smol_str = "0.3.4"

[dev-dependencies]
rstest = "0.26.1"

[features]
default = ["std"]
html-to-markdown = ["dep:scraper", "dep:ego-tree", "dep:serde_yaml"]
json = ["dep:serde", "dep:serde_json", "smol_str/serde"]
std = []
