[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Markdown parsing and manipulation utilities for mq"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-markdown"
readme = "../../README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.7"

[dependencies]
ego-tree = {workspace = true, optional = true}
itertools = {workspace = true}
markdown = {workspace = true}
miette = {workspace = true}
rustc-hash = {workspace = true}
scraper = {workspace = true, optional = true}
serde = {workspace = true, features = ["derive"], optional = true}
serde_json = {workspace = true, optional = true}
serde_yaml = {workspace = true, optional = true}
smol_str = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}

[features]
default = ["std"]
html-to-markdown = ["dep:scraper", "dep:ego-tree", "dep:serde_yaml"]
json = ["dep:serde", "dep:serde_json", "smol_str/serde"]
std = []
