[package]
description = "Model Context Protocol (MCP) server implementation for mq"
edition = "2024"
license = "MIT"
name = "mq-mcp"
version = "0.3.0"

[dependencies]
miette.workspace = true
mq-hir.workspace = true
mq-lang.workspace = true
mq-markdown.workspace = true
rmcp = {version = "0.8.1", features = ["server"]}
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
tokio = {version = "1.47.2", features = ["macros", "rt-multi-thread", "io-std"]}

[dev-dependencies]
mq-test.workspace = true
rstest.workspace = true

[lib]
name = "mq_mcp"
path = "src/lib.rs"
