[package]
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "mq-mcp"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
miette.workspace = true
mq-hir.workspace = true
mq-lang.workspace = true
mq-markdown.workspace = true
rmcp = {version = "0.8.5", features = ["server"]}
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread", "io-std"]}

[dev-dependencies]
mq-test.workspace = true
rstest.workspace = true

[lib]
name = "mq_mcp"
path = "src/lib.rs"
