
[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Python bindings for mq Markdown processing"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-python"
publish = false
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.4"

[lib]
crate-type = ["cdylib"]
name = "mq"

[dependencies]
mq-lang = {path = "../mq-lang", version = "0.5.3"}
mq-markdown = {path = "../mq-markdown", version = "0.5.3"}
pyo3 = {version = "0.27.2", features = ["extension-module", "abi3-py39"]}
