[project]
authors = [
  {name = "harehare", email = "harehare1110@gmail.com"},
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python",
]
dependencies = []
description = "Python bindings for mq, a jq-like command-line tool for Markdown processing"
keywords = ["markdown", "jq", "command-line", "tool"]
license = {text = "MIT"}
name = "markdown-query"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.1"

[tool.maturin]
module-name = "mq.mq"
python-packages = ["mq"]
python-source = "src"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]
