[package]
categories = ["command-line-utilities", "text-processing"]
description = "Read-Eval-Print Loop (REPL) for mq query language"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-repl"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.1"

[dependencies]
arboard = {version = "3.6.1", default-features = false}
colored = "3.0.0"
dirs = "6.0.0"
itertools = "0.14.0"
miette = {version = "7.6.0"}
mq-hir = {path = "../mq-hir", version = "0.5.1"}
mq-lang = {path = "../mq-lang", version = "0.5.1"}
mq-markdown = {path = "../mq-markdown", version = "0.5.1"}
regex-lite = "0.1.8"
rustyline = {version = "17.0.2", default-features = false, features = ["custom-bindings", "with-file-history"]}
strum = {version = "0.27.2", features = ["derive"]}

[dev-dependencies]
mq-test = {path = "../mq-test", version = "0.5.1"}
rstest = "0.26.1"
