[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Read-Eval-Print Loop (REPL) for mq query language"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-repl"
readme = "../../README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.14"

[dependencies]
colored = {workspace = true}
dirs = {workspace = true}
itertools = {workspace = true}
miette = {workspace = true}
mq-hir = {workspace = true}
mq-lang = {workspace = true}
mq-markdown = {workspace = true}
regex-lite = {workspace = true}
rustyline = {workspace = true, default-features = false, features = ["custom-bindings", "with-file-history"]}
strum = {workspace = true, features = ["derive"]}
tempfile = {workspace = true}

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = {workspace = true, optional = true}

[dev-dependencies]
scopeguard = {workspace = true}

[features]
clipboard = ["arboard"]
default = ["clipboard"]
