[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Command-line interface for mq Markdown processing tool"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-run"
readme = "../../README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.3"

[features]
debugger = ["mq-lang/debugger", "dep:rustyline", "dep:strum", "dep:regex-lite", "mq-dap"]
default = ["std", "use_mimalloc"]
std = []
use_mimalloc = ["mimalloc"]

[dependencies]
clap = {version = "4.5.53", features = ["derive"]}
colored = "3.0.0"
dirs = "6.0.0"
itertools = "0.14.0"
miette = {version = "7.6.0", features = ["fancy"]}
mimalloc = {version = "0.1.48", features = ["v3"], optional = true}
mq-dap = {path = "../mq-dap", optional = true, version = "0.5.1"}
mq-formatter = {path = "../mq-formatter", version = "0.5.1"}
mq-hir = {path = "../mq-hir", version = "0.5.1"}
mq-lang = {path = "../mq-lang", features = ["file-io"], version = "0.5.1"}
mq-lsp = {path = "../mq-lsp", version = "0.5.1"}
mq-markdown = {path = "../mq-markdown", features = ["json", "html-to-markdown"], version = "0.5.1"}
mq-repl = {path = "../mq-repl", version = "0.5.1"}
rayon = "1.11.0"
regex-lite = {version = "0.1.8", optional = true}
rustyline = {version = "17.0.2", optional = true, default-features = false, features = ["custom-bindings", "with-file-history"]}
strum = {version = "0.27.2", features = ["derive"], optional = true}
tokio = {version = "1.48.0", features = ["io-util", "io-std", "rt"]}
url = "2.5.7"

[dev-dependencies]
assert_cmd = "2.1.1"
rstest = "0.26.1"
scopeguard = "1.2.0"

[[bin]]
doc = false
name = "mq"
path = "src/main.rs"
required-features = ["std"]

[[bin]]
name = "mq-dbg"
path = "src/bin/dbg.rs"
required-features = ["debugger"]

[package.metadata.binstall]
pkg-fmt = "bin"
pkg-url = "{ repo }/releases/download/v{ version }/mq-{ target }{ binary-ext }"
