[package]
categories.workspace = true
description = "Test utilities and helpers for mq"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "mq-test"
publish = false
repository.workspace = true
version.workspace = true

[lib]
bench = false
doctest = false

[dependencies]
proptest.workspace = true
scopeguard = "1.2.0"
