[package]
categories = ["command-line-utilities", "text-processing"]
description = "Test utilities and helpers for mq"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-test"
publish = false
repository = "https://github.com/harehare/mq"
version = "0.5.2"

[lib]
bench = false
doctest = false

[dependencies]
proptest = "1.9"
scopeguard = "1.2.0"
