[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Type checker for mq"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-typechecker"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.1.0"

[dependencies]
itertools = { workspace = true }
miette = { workspace = true }
mq-hir = { workspace = true }
mq-lang = { workspace = true, features = ["cst"] }
rustc-hash = { workspace = true }
slotmap = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
