[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Type checker for mq"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
publish = false
name = "mq-typechecker"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.16"

[features]
cli = ["dep:clap", "dep:colored", "dep:url"]

[[bin]]
name = "mq-typecheck"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = {workspace = true, features = ["derive"], optional = true}
colored = {workspace = true, optional = true}
itertools = {workspace = true}
miette = {workspace = true, features = ["fancy"]}
mq-hir = {workspace = true}
mq-lang = {workspace = true, features = ["cst"]}
rustc-hash = {workspace = true}
slotmap = {workspace = true}
smol_str = {workspace = true}
thiserror = {workspace = true}
url = {workspace = true, optional = true}

[dev-dependencies]
rstest = {workspace = true}
